# cmake_test

./: .gitignore  CMakeLists.txt  CMakePresets.json  LICENSE  readme.md  setup-vs2022.bat  setup-vs2022.ps1  vcpkg.json
applications/: CMakeLists.txt
applications/MyApp/: CMakeLists.txt
applications/MyApp/src/: main.cpp
modules/: CMakeLists.txt
modules/Logger/: CMakeLists.txt  Log.h
modules/Logger/include/Logger/: Log.h
modules/Logger/src/: Logger.cpp  Logger.h  Logger2.cpp  Logger2.h
scripts/: bootstrap-vcpkg.cmake  bootstrap-vcpkg.ps1  bootstrap-vcpkg.sh  setup-linux.sh  setup-vs2022.ps1
src/: main.cpp
